--- a/package.json
+++ b/package.json
@@ -1,8 +1,25 @@
 {
+  "scripts": {
+    "test": "truffle test",
+    "solhint": "./node_modules/.bin/solhint -f table contracts/**/*.sol",
+    "prettier:solidity": "./node_modules/.bin/prettier --write contracts/**/*.sol",
+    "prettier:js": "./node_modules/.bin/prettier --write \"./**/*.js\"",
+    "format": "npm run prettier:solidity && npm run prettier:js",
+    "prepare": "husky install",
+    "test:migrate": "truffle compile --quiet && truffle migrate --dry-run --describe-json"
+  },
   "dependencies": {
     "@openzeppelin/contracts": "^3.2.0",
-    "@types/mocha": "^8.0.3",
-    "chai": "^4.2.0",
-    "mocha": "^8.1.3"
+    "@types/mocha": "^8.0.3"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "eslint": "^7.22.0",
+    "husky": "^5.1.3",
+    "mocha": "^8.3.2",
+    "prettier": "^2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.6",
+    "solhint": "^3.3.4",
+    "solidity-coverage": "^0.7.16"
   }
 }
