--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:car-manager": "truffle test ./test/CarManager.test.js",
     "test:itv-manager": "truffle test ./test/ITVManager.test.js",
     "coverage": "truffle run coverage",
-    "solhint": "./node_modules/.bin/solhint -f table contracts/**/*.sol",
+    "solhint": "./node_modules/.bin/solhint -f table contracts/*.sol",
     "prettier:solidity": "./node_modules/.bin/prettier --write contracts/**/*.sol",
     "prettier:js": "./node_modules/.bin/prettier --write \"./**/*.js\"",
     "format": "npm run prettier:solidity && npm run prettier:js"
